data/theme/gnome-shell.css
/* ... */
.panel-menu {
    -boxpointer-gap: 4px;
}

.panel-status-button-box {
    spacing: 4px;
}

.lock-screen-status-button-box {
    spacing: 8px;
}

/* User Menu */

#panelUserMenu {
    spacing: 4px;
}

.status-chooser {
    spacing: .4em;
}

.status-chooser .popup-menu-item,
.status-chooser-combo .popup-menu-item {
    padding: .4em;
}

.status-chooser-user-icon {
    border: 2px solid #8b8b8b;
    border-radius: 5px;
    width: 48pt;
    height: 48pt;
    background-size: contain;
}

.status-chooser-user-icon:hover {
    border: 2px solid #bbbbbb;
}

.status-chooser-user-name {
    font-weight: bold;
    font-size: 1.3em;
    min-width: 120pt;
}

.status-chooser-combo {
    border: 1px solid transparent;
}

.status-chooser-combo.popup-combo-menu {
    padding: .4em 0em;
    border-radius: 4px;
    border: 1px solid #5f5f5f;
}

.status-chooser-status-item,
.status-chooser-combo .popup-combobox-item {
    spacing: .4em;
}

.system-status-icon {
    icon-size: 1.09em;
}

.system-status-social-icon {
    icon-size: 40px;
    height: 30px;
}


/* Overview */
.workspace-thumbnails-background {
    border: 1px solid rgba(128, 128, 128, 0.4);
    border-right: 0px;
    border-radius: 9px 0px 0px 9px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 11px 7px 11px 11px;
}

.workspace-thumbnails-background:rtl {
    border-right: 1px;
    border-left: 0px;
    border-radius: 0px 9px 9px 0px;
    padding: 11px 11px 11px 7px;
}

.workspace-thumbnails {
    spacing: 11px;
    visible-width: 32px; /* Amount visible before hovering */
}

.workspace-thumbnail-indicator {
    border: 4px solid rgba(255,255,255,0.7);
    border-radius: 4px;
    padding: 1px;
}

.window-caption {
    spacing: 25px;
    background: rgba(0,0,0,0.5);
    border-radius: 8px;
    padding: 4px 12px;
    -shell-caption-spacing: 12px;
    border: 2px solid rgba(0, 0, 0, 0);
}

.window-caption:hover {
    border: 2px solid rgba(255, 255, 255, 0);
}

.window-close, .notification-close {
    background-image: url("close-window.svg");
    background-size: 32px;
    height: 32px;
    width: 32px;
}

.splash-close {
    -splash-close-overlap-x: -20px;
    -splash-close-overlap-y: 20px;
    background-image: url("close-splash.png");
    background-size: 20px;
    height: 20px;
    width: 20px;
}

.window-close {
    -shell-close-overlap: 16px;
}

.window-clone-border {
    border: 4px solid rgba(255, 255, 255, 0.5);
    border-radius: 4px;
}

.notification-close {
    /* we start out in the top right of the
     * notification, inset.
     *
     * center is 32px/2 = 16px
     *
     * adjust left 2px
     * adjust down 8px */

    -shell-close-overlap-x: 14px;
    -shell-close-overlap-y: -12px;
}

.notification-close:rtl {
    /* as above, but starting out in the top left of the
     * notification. */

    -shell-close-overlap-x: -14px;
}

.window-close:rtl {
    -st-background-image-shadow: 2px 2px 6px rgba(0,0,0,0.5);
}

.window-picker {
    -horizontal-spacing: 32px;
    -vertical-spacing: 32px;
    padding: 32px;
    padding-top: 0px;
}

.window-picker.external-monitor {
    padding: 32px;
}

/* Dash */

#dash {
    color: #5f5f5f;
    font-size: 11pt;
    padding: 4px 0px;
    background-color: rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(128, 128, 128, 0.4);
    border-left: 0px;
    border-radius: 0px 9px 9px 0px;
}

#dash:rtl {
    border-left: 1px;
    border-right: 0px;
    border-radius: 9px 0px 0px 9px;
}

.placeholder {
    background-image: url("dash-placeholder.svg");
    background-size: contain;
    height: 24px;
}

/* Search Box */
#searchEntry {
    width: 320px;

    font-family: sourcesanspro, sans-serif;
    font-size: 15px;

    color: #c5bcb6;
    caret-color: #ffffff;
    border: 1px solid rgba(245,245,245,0.15);
    background-color: rgba(30,30,30,0.70);
    box-shadow: inset 0px 1px 4px rgba(0,0,0,0.8);

    -minimum-vpadding: 24px;
}

#searchEntry:focus {
    color: #ffffff;
    background-color: rgba(30,30,30,0.65);
    transition-duration: 0ms;
}

#searchEntry:hover {
    color: #ffffff;
    background-color: rgba(30,30,30,0.65);
}

.search-entry-icon {
    icon-size: 1em;
}

.search-entry-hint {
    /* line the entry hint image with the search loupe */
    padding-top: 2px;
}

.dash-label {
    border-radius: 7px;
    padding: 4px 12px;
    background-color: rgba(0,0,0,0.5);
    text-align: center;
    -x-offset: 8px;
}

/* Application Launchers, Grid and List results */
.icon-grid {
    spacing: 10px;
    -shell-grid-horizontal-item-size: 118px;
    -shell-grid-vertical-item-size: 118px;
}

.overview-icon.dnd,
.icon-grid .overview-icon,
.app-splash-page {
    icon-size: 64px;
}

.overview-icon.dnd,
.icon-grid .overview-icon {
    spacing: 8px;
}

.overview-icon-label {
    width: 118px;
}

.overview-icon-label:focus {
    border-radius: 4px;
    background-gradient-start: rgb(200,200,200);
    background-gradient-end: white;
    background-gradient-direction: vertical;

    color: #555;
    caret-color: #555;
    selected-color: white;

    box-shadow: inset 0px 1px 2px rgba(0,0,0,0.6);
}

.overview-icon-label:highlighted,
.overview-icon-label:focus:highlighted {
    border-radius: 4px;
    background-color: #d2d2d2;
    background-gradient-direction: none;

    color: #333;

    box-shadow: none;
}

.all-apps > StBoxLayout {
    /* horizontal padding to make sure scrollbars or dash don't overlap content */
    padding: 0px 88px;
}

.app-folder-icon {
    padding: 5px;
}

.dash-item-container > StButton {
    padding: 4px 8px;
}

.overview-icon.dnd,
.app-well-app > .overview-icon,
.show-apps > .overview-icon {
    border-radius: 4px;
    padding: 3px;
    border: 1px rgba(0,0,0,0);
    transition-duration: 100ms;
    text-align: center;
}

.app-folder-popup-stack {
    /* keep this in sync with -shell-close-overlap in .notification-close */
    padding-right: 14px;
    padding-left: 0px;
}

.app-folder-popup-stack:rtl {
    padding-left: 14px;
    padding-right: 0px;
}
/* ... */

